--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>dishProvider</artifactId>
+    <artifactId>dishFinder</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>dishProvider</name>
     <description>dishProvider</description>
