--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=dishProvider
-OPENAI_API_KEY= [API KEY HERE]
+OPENAI_API_KEY=${OPENAI_API_KEY}
 openai.model=gpt-3.5-turbo
 openai.api.url=https://api.openai.com/v1/chat/completions
