--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ mainClassName = 'com.example.dishfinder.DishFinderApplication'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.4'
 
 
 }
