--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ mainClassName = 'com.example.dishfinder.DishFinderApplication'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
 }
