--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=dishProvider
 OPENAI_API_KEY=${OPENAI_API_KEY}
 openai.model=gpt-3.5-turbo
 openai.api.url=https://api.openai.com/v1/chat/completions
+APP_API_KEY=${APP_API_KEY}
