--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,3 +3,6 @@ OPENAI_API_KEY=${OPENAI_API_KEY}
 openai.model=gpt-3.5-turbo
 openai.api.url=https://api.openai.com/v1/chat/completions
 APP_API_KEY=${APP_API_KEY}
+server.error.include-message=always
+server.error.include-binding-errors=always
+
